[gd_scene load_steps=2 format=2]

[ext_resource path="res://UIs/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -79.0
margin_right = 100.0
margin_bottom = 79.0

[node name="sp_button" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Single Player"

[node name="mp_button" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 50 )
text = "Multiplayer"

[node name="exit_button" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 50 )
text = "exit"

[node name="Titel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -561.0
margin_top = 114.0
margin_right = -332.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 0 )
rect_scale = Vector2( 5, 5 )
bbcode_enabled = true
bbcode_text = "[center]EPIC SNOW DINO[/center]"
text = "EPIC SNOW DINO"

[node name="Multiplayer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -64.0
margin_right = 152.0
margin_bottom = 64.0

[node name="HostButton" type="Button" parent="Multiplayer"]
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "HOST"

[node name="HBoxContainer" type="HBoxContainer" parent="Multiplayer"]
margin_top = 54.0
margin_right = 304.0
margin_bottom = 104.0

[node name="ip_input" type="LineEdit" parent="Multiplayer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
placeholder_text = "ip goes here"

[node name="join_btn" type="Button" parent="Multiplayer/HBoxContainer"]
margin_left = 204.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Join"

[node name="back_btn" type="Button" parent="Multiplayer"]
margin_top = 108.0
margin_right = 304.0
margin_bottom = 128.0
text = "Back"

[connection signal="pressed" from="VBoxContainer/sp_button" to="." method="_on_sp_button_pressed"]
[connection signal="pressed" from="VBoxContainer/mp_button" to="." method="_on_mp_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Multiplayer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="text_changed" from="Multiplayer/HBoxContainer/ip_input" to="." method="_on_ip_input_text_changed"]
[connection signal="pressed" from="Multiplayer/HBoxContainer/join_btn" to="." method="_on_join_btn_pressed"]
[connection signal="pressed" from="Multiplayer/back_btn" to="." method="_on_back_btn_pressed"]
